--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -3,51 +3,58 @@
     #blog-return-arrow
       ▲
     %span.section-title
-      .blog-icon
-      Latest Blog Posts
+      %h2
+        Latest Blog Posts
     .section-content
       -# load the two most recent blog entries and display here
       %article.blog-post
         .author
           .author-image
-            \:)
+            = image_tag "temp_images/kovsky_client.png"
           .author-name
-            David Kovsky
+            %a{:href => "#"}
+              David Kovsky
           .author-date
             April 9, 2012
         .blog-post-content
           %header.blog-title
-            Removing Technical Debt
+            %a{:href => "#"}
+              Removing Technical Debt
           .blog-body
             I had a great time at the Mile High Agile 2012...
-        %footer.blog-footer
-          .read-more
-            %a.read-more{:href => "#"}
-              Read More
-            |
-            %a.comments{:href => "#"}
-              Comments: 1
+          %footer.blog-footer
+            .read-more
+              %a.read-more{:href => "#"}
+                Read More
+              |
+              %a.comments{:href => "#"}
+                Comments: 1
 
       %article.blog-post
         .author
           .author-image
-            \:)
+            = image_tag "temp_images/ryan_client.png"
           .author-name
-            Ryan Ahearn
+            %a{:href => "#"}
+              Ryan Ahearn
           .author-date
             April 6, 2012
         .blog-post-content
           %header.blog-title
-            Polymorphic Associations and validate_uniqueness_of
+            %a{:href => "#"}
+              Polymorphic Associations and validate_uniqueness_of
           .blog-body
-            One of my favorite helper libraries when testing is...
-        %footer.blog-footer
-          .read-more
-            %a.read-more{:href => "#"}
-              Read More
-            |
-            %a.comments{:href => "#"}
-              Comments: 2
+            One of my favorite helper libraries when testing is
+            %a{:href => "https://github.com/thoughtbot/shoulda-matchers"} thoughtbot's shoulda-matchers
+            They do a great job making common situations easy to test in one line, but I recently ran into a gotcha with the validate_uniqueness_of
+            matcher. Validating both uniqueness of a polymorphic association and another validation on the same association can cause some strange error messages regarding undefined classes due to the way scoping and validations are handled.
+          %footer.blog-footer
+            .read-more
+              %a.read-more{:href => "#"}
+                Read More
+              |
+              %a.comments{:href => "#"}
+                Comments: 2
 
     #twitter-feed
       .twitter-bird
