clean up the styles and markup quite a bit, try to make things more semantic via mixins

--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -16,11 +16,18 @@ $dark-orange: #f05325;
 
 $silver: #c1c5c9;
 $gold: #d6c29c;
+$white: #FFF;
+$black: #000;
 
 //
 //$header-height: 175px;
 //
 //$feature-height: 450px;
+
+@mixin w960 {
+  width: 960px;
+  margin: 0px auto;
+}
 
 @mixin centered {
   margin: 0 auto;
