--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,4 +1,4 @@
-%section#blueprint-image.w960
+%section#blueprint-image
   #blueprint-wrapper
     = link_to "", "#", :class => :point1
     = link_to "", "#", :class => :point2
@@ -17,9 +17,7 @@
 
 .clearfix
 
-.divider
-
-%section#features.w960
+%section#features
   %ul.clearfix
     %li
       = image_tag "people.png"
@@ -54,9 +52,7 @@
 
 .clearfix
 
-.divider
-
-%section#contact-us.w960
+%section#contact-us
   = image_tag "mail.png"
   %h2 DON'T BE SHY, SAY HELLO
 
@@ -65,7 +61,7 @@
   = link_to "Contact Us", "#", :class => ["first", "blue-arrow"]
   = link_to "Request a FREE Quote", "#", :class => "blue-arrow"
 
-%section#featured-projects.w960
+%section#featured-projects
   %header.clearfix
     %h2 Featured Projects
     = link_to "See More Case Studies", "#", :class => "blue-arrow"
@@ -81,7 +77,7 @@
 
 .clearfix
 
-%section#our-clients.w960
+%section#our-clients
   %header.clearfix
     %h2 Our Clients
     = link_to "See Our Portfolio", "#", :class => "blue-arrow"
