--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -3,7 +3,7 @@
     %a#logo{:href => "index.htm"}
 
     #ribbon
-      = link_to image_tag("twitter.png"), "#"
+      = link_to image_tag("banner_twitter.png"), "#"
       = link_to image_tag("facebook.png"), "#"
 
   %nav.divider#main
