drop the padding in the footer for now, it just makes the bottom of the page look messed up

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -241,7 +241,7 @@ section#blueprint-image {
 
 footer {
   //background: $blue;
-  padding-bottom: 200px;
+  //padding-bottom: 200px;
   margin-top: 170px;
   position: relative;
   overflow: hidden;
